eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Teller_Transaction_Signatory__c.object
<CustomObject>
    <fields>
        <fullName>Account_Holder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Holder</label>
        <referenceTo>Asset_Relationship__c</referenceTo>
        <relationshipLabel>Teller Transaction Signatories</relationshipLabel>
        <relationshipName>Teller_Transaction_Signatories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Photo_Image_Id__c</fullName>
        <label>Photo Image Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Image_URL__c</fullName>
        <formula>&quot;//servlet//servlet.FileDownload?file=&quot; + Photo_Image_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teller Transaction Signatories</relationshipLabel>
        <relationshipName>Teller_Transaction_Signatories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signature_Image_Id__c</fullName>
        <label>Signature Image Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Image_URL__c</fullName>
        <formula>&quot;//servlet//servlet.FileDownload?file=&quot; + Signature_Image_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teller_Transaction__c</fullName>
        <label>Teller Transaction</label>
        <referenceTo>Teller_Transaction__c</referenceTo>
        <relationshipLabel>Teller Transaction Signatories</relationshipLabel>
        <relationshipName>Teller_Transaction_Signatories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Teller Transaction Signatory</label>
    <listViews>
        <fullName>Account_Holders</fullName>
        <columns>NAME</columns>
        <columns>Account_Holder__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>Teller_Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Holder__c</field>
            <operation>equals</operation>
            <value>1101011292001357475</value>
        </filters>
        <label>Account Holders</label>
        <language>en_US</language>
        <sharedTo>
            <role>Change_Delivery_Manager</role>
            <role>Salesforce_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teller Transaction Signatory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Transaction Signatories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>